cambio de titulo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>La cocina de Juan - Home</title>
 </head>
 <body>
     <header class="header">
@@ -19,5 +19,16 @@
 <img src="https://www.recetas-argentinas.com/base/stock/Recipe/304-image/304-image_web.jpg.webp" alt="Sopa de calabaza" height="400" width="400">
 <br>
 <button>Receta</button>
+<footer class="footer">
+    <span class="icons">
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-debian"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-instagram"></i>
+    </span>
+    <br>
+    <h2>Derechos reservados.@2020</h2>
+    </footer>
 </body>
 </html>
