--- a/form.html
+++ b/form.html
@@ -18,22 +18,62 @@
 <h2>Formulario de registro</h2>
 <form>
     <label for="firstname">Nombre: </label>
-    <input size="30" type="text" name="firstname" id="firstname">
+    <input size="20" type="text" name="firstname" id="firstname">
     <label for="lastname">Apellido: </label>
-    <input size="30" type="text" name="lastname" id="lastname">
+    <input size="20" type="text" name="lastname" id="lastname">
     <br>
     <label for="address">Dirección:</label>
     <br>
     <label for="street">Calle: </label>
-    <input size="30" type="text" name="street" id="street">
+    <input size="20" type="text" name="street" id="street">
     <label for="streetnumber">Numero: </label>
     <input size="10" type="number" name="streetnumber" id="streetnumber">
     <label for="city">Ciudad: </label>
-    <input size="30" type="text" name="city" id="city">
+    <input size="20" type="text" name="city" id="city">
     <label for="zipcode">Código postal</label>
     <input for="10" type="number" name="zipcode" id="zipcode">
     <br>
-    
+    <label for="phonenumber">Telefono: </label>
+    <input size="10" type="number" name="phonenumber" id="phonenumber">
+    <label for="birthdate">Fecha de nacimiento: </label>
+    <input size="10" type="date" name="birthdate" id="birthdate">
+    <label for="email">Mail: </label>
+    <input size="20" type="email" name="email" id="email">
+    <label for="password">Clave: </label>
+    <input size="20" type="password" name="password" id="password">
+    <label for="link">Link del TP 3: </label>
+    <input size="20" type="text" name="link" id="link">
+    <br>
+    <label for="genre">Genero: </label>
+    <input type="radio" name="genre" value="1">Hombre
+    <input type="radio" name="genre" value="2">Mujer
+    <input type="radio" name="genre" value="3">Otro
+    <br>
+    <label for="knowledges">Conocimientos previos: </label>
+    <input type="checkbox" name="knowledges" value="1">HTML
+    <input type="checkbox" name="knowledges" value="2">CSS
+    <input type="checkbox" name="knowledges" value="3">Bootstrap
+    <input type="checkbox" name="knowledges" value="4">JavaScript
+    <input type="checkbox" name="knowledges" value="5">TypeScript
+    <input type="checkbox" name="knowledges" value="6">Angular
+    <input type="checkbox" name="knowledges" value="7">SQL
+    <input type="checkbox" name="knowledges" value="8">Python
+    <input type="checkbox" name="knowledges" value="9">Django
+    <br>
+    <label for="studies">Estudios: </label>
+    <select name="studies">
+        <option>Primario</option>
+        <option>Secundario</option>
+        <option>Terciario</option>
+        <option>Universatario</option>
+        <option>Posgrado</option>
+    </select>
+    <br>
+    <label for="commits">Comentarios:</label>
+    <br>
+    <textarea name="name" cols="50" rows="10">Escribe tu consulta</textarea>
+    <br>
+    <input type="submit" name="Enviar">
 </form>
     <footer class="footer">
         <span class="icons">
