Completado de los placeholder

--- a/form.html
+++ b/form.html
@@ -18,23 +18,23 @@
 <h2>Formulario de registro</h2>
 <form>
     <label for="firstname">Nombre: </label>
-    <input size="20" type="text" name="firstname" id="firstname">
+    <input size="20" type="text" name="firstname" id="firstname" placeholder="Ingrese su nombre aquí ...">
     <label for="lastname">Apellido: </label>
-    <input size="20" type="text" name="lastname" id="lastname">
+    <input size="20" type="text" name="lastname" id="lastname" placeholder="Ingrese su apellido aquí ...">
     <br>
     <label for="address">Dirección:</label>
     <br>
     <label for="street">Calle: </label>
-    <input size="20" type="text" name="street" id="street">
+    <input size="20" type="text" name="street" id="street" placeholder="Ingrese su calle aquí ...">
     <label for="streetnumber">Numero: </label>
-    <input size="10" type="number" name="streetnumber" id="streetnumber">
+    <input size="10" type="number" name="streetnumber" id="streetnumber" placerholder="Ingrese su número ...">
     <label for="city">Ciudad: </label>
-    <input size="20" type="text" name="city" id="city">
+    <input size="20" type="text" name="city" id="city" value="C.A.B.A">
     <label for="zipcode">Código postal</label>
-    <input for="10" type="number" name="zipcode" id="zipcode">
+    <input for="10" type="number" name="zipcode" id="zipcode" placeholder="Ingrese su código postal ...">
     <br>
     <label for="phonenumber">Telefono: </label>
-    <input size="10" type="number" name="phonenumber" id="phonenumber">
+    <input size="10" type="number" name="phonenumber" id="phonenumber" placeholder="Ingrese su número aquí">
     <label for="birthdate">Fecha de nacimiento: </label>
     <input size="10" type="date" name="birthdate" id="birthdate">
     <label for="email">Mail: </label>
