--- a/form.html
+++ b/form.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La cocina de Juan - Registrese</title>
+    <link rel="stylesheet" href="sytles.css">
 </head>
 <body>
     <header class="header">
-        <button>Home</button>
+        <a href="index.html"><button>Home</button></a>
         <button>Acerca</button>
         <button>Contacto</button>
-        <button>Registrese</button>
-        <button>Sucursales</button>
+        <a href="form.html"><button>Registrese</button></a>
+        <button>Sucursales</button>   
         <br>
         <h1>La cocina de Juan </h1>
     </header>
