fin del ejercicio

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La cocina de Juan - Home</title>
     <link rel="stylesheet" href="sytles.css">
+    <script src="https://kit.fontawesome.com/87f933d8f8.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -14,18 +15,20 @@
         <a href="form.html"><button>Registrese</button></a>
         <button>Sucursales</button>
         <br>
-        <h1>La cocina de Juan </h1>
+        <h1 id="titulo_de_pagina">La cocina de Juan </h1>
     </header>
 <h3>Sopa Crema de Calabaza</h3>
 <img src="https://www.recetas-argentinas.com/base/stock/Recipe/304-image/304-image_web.jpg.webp" alt="Sopa de calabaza" height="400" width="400">
 <br>
 <button>Receta</button>
+<br>
+<br>
 <footer class="footer">
     <span class="icons">
         <i class="fa-brands fa-twitter"></i>
         <i class="fa-brands fa-facebook"></i>
         <i class="fa-brands fa-debian"></i>
-        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-linkedin"></i>
         <i class="fa-brands fa-instagram"></i>
     </span>
     <br>
