--- a/form.html
+++ b/form.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La cocina de Juan - Registrese</title>
     <link rel="stylesheet" href="sytles.css">
+    <script src="https://kit.fontawesome.com/87f933d8f8.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -14,7 +15,7 @@
         <a href="form.html"><button>Registrese</button></a>
         <button>Sucursales</button>   
         <br>
-        <h1>La cocina de Juan </h1>
+        <h1 id="titulo_de_pagina">La cocina de Juan </h1>
     </header>
 <h2>Formulario de registro</h2>
 <form>
@@ -75,14 +76,16 @@
     <textarea name="name" cols="50" rows="10">Escribe tu consulta</textarea>
     <br>
     <input type="submit" name="Enviar">
+    <br><br>
 </form>
     <footer class="footer">
         <span class="icons">
             <i class="fa-brands fa-twitter"></i>
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-debian"></i>
+            <i class="fa-brands fa-linkedin"></i>
             <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-instagram"></i>
+            
         </span>
     <br>
     <h2>Derechos reservados.@2020</h2>
